@@ -32,12 +32,12 @@ void test02()
   fb.pubimbue(loc);
   fb.pubsetbuf(0, 0);
   fb.open("tmp_11305-2", ios_base::out);
-  wint_t n1 = fb.sputc(0x20000000);
-  wint_t n2 = fb.sputc(0x40000000);
+  wfilebuf::int_type n1 = fb.sputc(L'n');
+  wfilebuf::int_type n2 = fb.sputc(L'e');
   wfilebuf* f = fb.close();
   
-  VERIFY( n1 != WEOF );
-  VERIFY( n2 != WEOF );
+  VERIFY( n1 != wfilebuf::traits_type::eof() );
+  VERIFY( n2 != wfilebuf::traits_type::eof() );
   VERIFY( f != NULL );
 }
 
