@@ -31,10 +31,10 @@ void test03()
   locale loc(__gnu_cxx_test::try_named_locale("en_US.UTF-8"));
   fb.pubimbue(loc);
   fb.open("tmp_11305-3", ios_base::out);
-  wint_t n1 = fb.sputc(0x20000000);
+  wfilebuf::int_type n1 = fb.sputc(L'a');
   wfilebuf* f = fb.close();
 	
-  VERIFY( n1 != WEOF );
+  VERIFY( n1 != wfilebuf::traits_type::eof() );
   VERIFY( f != NULL );
 }
 
